// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Driver formatConfig() formats to JS if config ends in .js 1`] = `
"module.exports = {
  \\"foo\\": 123,
  \\"bar\\": \\"abc\\",
  \\"baz\\": true
};"
`;

exports[`Driver formatConfig() formats to JSON if config ends in .json 1`] = `
"{
  \\"foo\\": 123,
  \\"bar\\": \\"abc\\",
  \\"baz\\": true
}"
`;

exports[`Driver setMetadata() bin is required 1`] = `"Invalid TestDriver field \\"bin\\". Field is required and must be defined."`;

exports[`Driver setMetadata() command options doesnt support description as other types 1`] = `"Invalid TestDriver field \\"commandOptions.foo.description\\". Must be a string, received 123."`;

exports[`Driver setMetadata() command options doesnt support empty descriptions 1`] = `"Invalid TestDriver field \\"commandOptions.foo.description\\". String cannot be empty."`;

exports[`Driver setMetadata() command options requires a description 1`] = `"Invalid TestDriver field \\"commandOptions.foo.description\\". Field is required and must be defined."`;

exports[`Driver setMetadata() configName doesnt support non-strings 1`] = `"Invalid TestDriver field \\"configName\\". Must be a string, received 123."`;

exports[`Driver setMetadata() configName is required 1`] = `"Invalid TestDriver field \\"configName\\". Field is required and must be defined."`;

exports[`Driver setMetadata() title doesnt support non-strings 1`] = `"Invalid TestDriver field \\"title\\". Must be a string, received 123."`;

exports[`Driver setMetadata() title is required 1`] = `"Invalid TestDriver field \\"title\\". Field is required and must be defined."`;

exports[`Driver validates fields 1`] = `"Invalid Driver field \\"args\\". Must be an array, received true."`;
